# CVS

./: .claudeignore  .gitignore  CVS-Analyzer-docs-v2.1.md  CVS-Analyzer-docs.md  README.md  analyses.csv  convert.sh  delete_superadmin.sql  docker-compose.yml  export_db_to_excel.py  index.html  migrate_prompts_owner.sql  package-lock.json  pyproject.toml  restore_default_prompt.sql
backend/: .env.example  Dockerfile  Makefile  create_superadmin.py  init.sql  init_tables.py  requirements.txt
backend/app/: database.py  main.py
backend/app/api/: analyze.py  auth.py  profile.py  prompts.py  tariffs.py  vacancies.py
backend/app/core/: config.py
backend/app/models/: __init__.py  analyses.py  payments.py  prompt.py  tariff.py  user.py  user_tariffs.py  vacancy.py
backend/app/schemas/: __init__.py  analysis.py  prompt.py  user.py  vacancy.py
backend/app/services/: ai_service.py  (+1 more)
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: content.css  content.js  hh.ru.js  resumeExpander.js
extension/popup/: popup.css  popup.html  popup.js
extension/utils/: api.js  cache.js  parser.js  storage.js
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
project_docs/: AI_DEV_GUIDE.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  DEPLOY.md  INDEX.md  SECURITY.md
project_docs/parts/: extension_description.md  task_1_research.md
src/: App.vue
src/stores/: vacancies.js
src/views/: AnalysisDetailView.vue  HistoryView.vue  PromptsView.vue  VacancyDetailView.vue  VacancyEditView.vue
(+26 files in other folders)
